--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
       <button>learn more</button>
     </section>
   </main>
-  <div class="attribution">
+  <footer>
+  <p class="attribution">
     Challenge by <a href="https://www.frontendmentor.io/profile/elshora" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Mahmoud Elshora</a>.
-  </div>
+  </p>
+  </footer>
 </body>
 </html>
