--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>3-column preview card component</title>
 
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { margin: 1rem; font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
